feat: stage には非表示フラグではなくパスワードを持たせる
